results del test

--- a/notebooks/test_JEGS.ipynb
+++ b/notebooks/test_JEGS.ipynb
@@ -11,16 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f75009f6",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import ~/HEXAPAWN/src/ambiente.py"
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from src.ambiente import Hexpawn"
    ]
   },
   {
@@ -33,14 +32,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "14c00bc7",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Turno de: Blancas\n",
+      "B B B\n",
+      ". . .\n",
+      "W W W\n",
+      "\n",
+      "Movimientos posibles: [((2, 0), (1, 0)), ((2, 1), (1, 1)), ((2, 2), (1, 2))]\n",
+      "\n",
+      "Turno de: Negras\n",
+      "B B B\n",
+      "W . .\n",
+      ". W W\n",
+      "\n",
+      "Movimientos posibles: [((0, 1), (1, 1)), ((0, 1), (1, 0)), ((0, 2), (1, 2))]\n",
+      "\n",
+      "Turno de: Blancas\n",
+      "B . B\n",
+      "W B .\n",
+      ". W W\n",
+      "\n",
+      "Movimientos posibles: [((2, 2), (1, 2)), ((2, 2), (1, 1))]\n",
+      "¡El ganador es: W!\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "game = Hexpawn()\n",
     "\n",
@@ -59,8 +83,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
